<resources>
    <string name="app_name">Onetime Dialer</string>
    <string name="label_editcall_call">Call</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_item_groups">Rule Groups</string>
    <string name="menu_item_help">Help</string>
    <string name="menu_item_export">Export</string>
    <string name="menu_item_import">Import</string>
    <string name="menu_item_reset">Reset</string>
    <string name="navigation_drawer_open">drawer open</string>
    <string name="navigation_drawer_close">drawer close</string>
    <string name="message_before_reset">All your changes will be lost, click again immediately to reset</string>
    <string name="message_after_add_group">group added</string>
    <string name="message_validation_group_name_too_short">group name at least 5 characters long</string>
    <string name="message_validation_group_name_in_use">group name already in use</string>
    <string name="message_after_save_no_change">no change detected</string>
    <string name="message_add_group_max_groups">maximum %d groups</string>
    <string name="message_delete_group_clickagain">click again immediately to delete</string>
    <string name="message_delete_group_deleted">group deleted</string>
    <string name="message_copy_group_copied_to">group copied to %s</string>
    <string name="message_edit_group_saved">group change saved</string>
    <string name="message_export_settings_error">an error occurred while exporting settings</string>
    <string name="message_export_settings_chooser_title">exporting settings...</string>
    <string name="message_import_settings_success">settings successfully imported, restarting app</string>
    <string name="message_import_settings_cannot_find_file">cannot find file: %s</string>
    <string name="literal_preload_settings_filename">preload_sample_groups.json</string>
    <string name="literal_export_settings_email_subject">setting export</string>
    <string name="literal_export_settings_email_body">setting export</string>
    <string name="message_reset_settings_success">settings successfully reset, restarting app</string>
    <string name="message_reset_settings_cannot_find_file">cannot find file: preload_sample_groups.json</string>
    <string name="message_add_rule_success">rule added</string>
    <string name="message_add_rule_max_rules">maximum %d rules per group</string>
    <string name="message_delete_rule_clickagain">click again immediately to delete</string>
    <string name="message_delete_rule_deleted">rule deleted</string>
    <string name="message_rewrite_result_numbers">Dialed: %1$s\nCalled: %2$s</string>
    <string name="message_test_result_numbers">matching pattern: %1$s\nresult: %2$s</string>
    <string name="message_test_result_none_match">none</string>

    <string name="message_edit_rule_saved">rule change saved</string>
    <string name="message_copy_rule_copied_to">rule copied to %s</string>


    <string name="title_rules">Rules - %s</string>
    <string name="title_rule_add">+ Rule - %s</string>
    <string name="title_groups">Rule Groups</string>
    <string name="title_group_add">+ Rule Group</string>
    <string name="title_help">Help</string>

    <string name="message_validate_rule_invalid_character">invalid character found in %s</string>
    <string name="message_validate_rule_invalid_format">invalid format found in %s</string>
    <string name="message_validate_rule_more_match_in_formula">maximum match index in %s exceeded number of matches in pattern</string>
    <string name="literal_validate_rule_pattern">pattern</string>
    <string name="literal_validate_rule_formula">formula</string>
    <string name="message_validate_rule_too_short">%s is too short</string>
    <string name="message_validate_rule_plus_first">\'+\' can only be the first character in %s</string>
    <string name="message_validate_rule_percent_last">\'%%\' should be at the end of %s</string>
    <string name="message_validate_rule_percent_not_first">\'%%\' should not be at the beginning of %s</string>
    <string name="message_validate_rule_pair_brackets">curly brackets should be in pairs in %s</string>
    <string name="message_validate_rule_bracket_before_percent">\'%%\' is not valid following a bracket in %s</string>
    <string name="message_validate_rule_empty_brackets">empty brackets in %s</string>

    <string name="literal_locale">en</string>

    <string name="literal_hint_group_name">Group Name</string>
    <string name="literal_hint_group_test_enter_number">enter a test number</string>
    <string name="literal_hint_rule_pattern">pattern</string>
    <string name="literal_hint_rule_formula">formula</string>
    <string name="literal_hint_rule_name">Comment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="label_settings_more_call_log">Create more log for rerouted calls</string>
    <string name="menu_item_settings">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="label_settings_enable_rewrite">Manage outgoing calls</string>

    <string name="greeting_groups">Find out what a button does by clicking it.</string>
    <string name="greeting_rules">Adjust a rule\'s position with a long click, then drag-and-drop.</string>

    <string name="message_EULA">By downloading, installing or using this software, you expressly understand and agree:\n
\nTHAT TO THE EXTENT PERMITTED BY LAW, THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, TITLE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE COPYRIGHT HOLDERS OR ANYONE DISTRIBUTING THE SOFTWARE BE LIABLE FOR ANY DAMAGES OR OTHER LIABILITY, WHETHER IN CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
</string>
    <string name="literal_eula_agree">I Agree</string>
    <string name="title_eula">End User Agreement</string>
    <string name="menu_item_about">About</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="literal_stacktrace_email_recipient">callrouter@demitive.com</string>
    <string name="literal_stacktrace_email_subject">crash report: %1$s/build %2$d</string>
    <string name="literal_version_properties_filename">version.properties</string>
    <string name="message_stacktrace_chooser_title">A report has been generated about the recent crash. please help improve the app by sending the report to developer. Thank you!</string>
    <string name="message_export_settings_error_noemail">no email program found on device, cannot export settings</string>
    <string name="message_import_settings_error_no_document_opener">The device does not have an App to choose an import file with</string>
    <string name="literal_dummy_email_recipient">someone@somewhere.com</string>
    <string name="label_settings_show_number_change">Display message for rerouted calls</string>
</resources>
