<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mevoice.callrouter.MainActivity">
    <group android:id="@+id/options_groups">
        <item
            android:id="@+id/action_send_email"
            android:title="@string/menu_item_export"
            android:orderInCategory="100"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_import"
            android:title="@string/menu_item_import"
            android:orderInCategory="100"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_reset"
            android:title="@string/menu_item_reset"
            android:orderInCategory="100"
            app:showAsAction="never" />
    </group>
</menu>